added details (with fetching errors) and create

--- a/views/records/details.hbs
+++ b/views/records/details.hbs
@@ -1,7 +1,7 @@
 <section class="row">
     <h6 class="badge text-bg-secondary">{{record.child}}</h6>
     <h1>{{record.event}}</h1>
-    <p>{{record.details}}</p>
-    <p>Date: {{record.updatedDate}}</p>
+    <p>{{record.notes}}</p>
+    <p>Date: {{record.date}}</p>
     <a href="/records" class="btn btn-primary">Back to List</a>
 </section>
