--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,11 @@ i {
         color: var(--secondary-blue);
     }
 
+aside i {
+    font-size: 16px;
+    color: var(--white);
+}
+
 .btn-primary {
     color: #fff;
     border-radius: 0.4rem;
