--- a/views/records/details.hbs
+++ b/views/records/details.hbs
@@ -2,6 +2,6 @@
     <h6 class="badge text-bg-secondary">{{record.child}}</h6>
     <h1>{{record.event}}</h1>
     <p>{{record.notes}}</p>
-    <p>Date: {{record.date}}</p>
+    <p>Date: {{record.updatedDate}}</p>
     <a href="/records" class="btn btn-primary">Back to List</a>
 </section>
