--- a/views/records/index.hbs
+++ b/views/records/index.hbs
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <p class="card-text">{{this.notes}}</p>
-                <a href="/records/details/{{this.id}}" class="btn btn-outline-primary btn-sm mb-1">Read More</a>
+                <a href="/records/details/{{this.id}}" class="btn btn-outline-primary btn-sm mb-1">View</a>
             </div>
         </div>
     </article>
