--- a/views/records/details.hbs
+++ b/views/records/details.hbs
@@ -1,7 +1,18 @@
-<section class="row">
+<section>
+    <a href="/records" class="btn btn-link ps-0 mb-4">
+        <i class="bi bi-chevron-left pe-2"></i>Back to List
+    </a>
+    <article>
     <h6 class="badge text-bg-secondary">{{record.child}}</h6>
     <h1>{{record.event}}</h1>
     <p>{{record.notes}}</p>
     <p>Date: {{record.updatedDate}}</p>
-    <a href="/records" class="btn btn-primary">Back to List</a>
+    </article>
+    <a href="/records/edit/{{record._id}}" class="btn btn-primary">
+        <i class="bi bi-pencil-square pe-2"></i>Edit
+    </a>
+    <a href="/records/delete/{{record._id}}" class="btn btn-outline-danger"
+        onclick="return confirm('Are you sure?')";>
+        <i class="bi bi-trash3 pe-2"></i>Delete
+    </a>
 </section>
