--- a/views/records/create.hbs
+++ b/views/records/create.hbs
@@ -14,8 +14,8 @@
         {{!-- health event --}}
         <fieldset class="mb-4">
             <label for="event" class="form-label"><small>Health event: *</small></label>
-            <input name="event" id="event" class="form-control" placeholder="Health event" aria-describedby="eventHelp" required/>
-            <div id="eventHelp" class="form-text">E.g. Allergy, General Health, Health Maintenance, Vaccination, Medication, Surgery, etc.</div>
+            <input name="event" id="event" class="form-control" placeholder="Health event" aria-describedby="help" required/>
+            <div id="help" class="form-text">E.g. Allergy, General Health, Health Maintenance, Vaccination, Medication, Surgery, etc.</div>
         </fieldset>
         {{!-- notes --}}
         <fieldset class="mb-4">
