--- a/views/records/details.hbs
+++ b/views/records/details.hbs
@@ -2,17 +2,21 @@
     <a href="/records" class="btn btn-link ps-0 mb-4">
         <i class="bi bi-chevron-left pe-2"></i>Back to List
     </a>
-    <article>
-    <h6 class="badge text-bg-secondary">{{record.child}}</h6>
-    <h1>{{record.event}}</h1>
-    <p>{{record.notes}}</p>
-    <p>Date: {{record.updatedDate}}</p>
+    <article class="health-details">
+        <div class="d-flex align-items-start mb-2">
+            <h6 class="badge text-bg-secondary m-0">{{record.child}}</h6>
+            <p class="m-0">
+                <small><span class="m-2">•</span>{{record.updatedDate}}</small>
+            </p>
+        </div>
+        <h1>{{record.event}}</h1>
+        <p class="mb-4">{{record.notes}}</p>
+        <a href="/records/edit/{{record._id}}" class="btn btn-primary">
+            <i class="bi bi-pencil-square pe-2"></i>Edit
+        </a>
+        <a href="/records/delete/{{record._id}}" class="btn btn-outline-danger"
+            onclick="return confirm('Are you sure?')";>
+            <i class="bi bi-trash3 pe-2"></i>Delete
+        </a>
     </article>
-    <a href="/records/edit/{{record._id}}" class="btn btn-primary">
-        <i class="bi bi-pencil-square pe-2"></i>Edit
-    </a>
-    <a href="/records/delete/{{record._id}}" class="btn btn-outline-danger"
-        onclick="return confirm('Are you sure?')";>
-        <i class="bi bi-trash3 pe-2"></i>Delete
-    </a>
 </section>
