--- a/views/records/search.hbs
+++ b/views/records/search.hbs
@@ -1,24 +1,8 @@
-<section class="row">
-    <header class="col-md-8">
-        <h1>Health Records</h1>
-        <p>Add your child's medical information to keep medical records organized and up-to-date.</p>
-    </header>
-    <aside class="col-md-4 align-self-md-center text-md-end">
-        <p>
-            <a href="/records/create" class="btn btn-primary">
-                <i class="bi bi-plus-lg pe-2"></i>Create New
-            </a>
-        </p>
-    </aside>
-</section>
-
-<section class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
-    <form action="/records/search" method="post" class="d-flex mb-5">
-        <input name="keyword" class="form-control me-2" placeholder="Type keyword to search" required />
-        <button class="btn btn-outline-primary">
-            <i class="bi bi-search"></i>
-        </button>
-    </form>
+<section class="row pb-4">
+    <a href="/records" class="btn btn-link ps-0 mb-4 text-start">
+        <i class="bi bi-chevron-left pe-2"></i>Back to List
+    </a>
+    <h1>Search Results for: {{keyword}}</h1>
 </section>
 
 <section class="row">
