--- a/views/records/index.hbs
+++ b/views/records/index.hbs
@@ -1,4 +1,4 @@
-<section class="row">
+<section class="row pb-2">
     <header class="col-md-8">
         <h1>Health Records</h1>
         <p>Add your child's medical information to keep medical records organized and up-to-date.</p>
@@ -12,14 +12,15 @@
     </aside>
 </section>
 
-<section class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+{{!-- keyword search: to fix - not fetching queries --}}
+{{!-- <section class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
     <form action="/records/search" method="post" class="d-flex mb-5">
         <input name="keyword" class="form-control me-2" placeholder="Type keyword to search" required />
         <button class="btn btn-outline-primary">
             <i class="bi bi-search"></i>
         </button>
     </form>
-</section>
+</section> --}}
 
 <section class="row">
     {{#each records}}
