complete public and record auth

--- a/views/auth/unauthorized.hbs
+++ b/views/auth/unauthorized.hbs
@@ -1,2 +1,3 @@
-<h1 class="mb-4">403: Authorized</h1>
+<h1>403: Unauthorized</h1>
 <p class="text-danger">Sorry, you can't access this page.</p>
+<a href="/" class="btn btn-link ps-0 mb-4">Back to Home</a>
