--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@
     --bg-blue: #edf3ff;
     --gray: #6c757d;
     --error: #dc3545;
+    --success: #198754;
 }
 
 /* Font styles */
@@ -22,7 +23,7 @@
     line-height: 1.4;
 }
 
-nav div > a:first-of-type, h1,h3, h5 {
+nav div > a:first-of-type, h1, h2, h3, h5 {
     font-family: "Calistoga";
 }
 
@@ -31,7 +32,11 @@ h1 {
     color: var(--primary-blue);
 }
 
-h5 {
+.h1-small {
+    font-size: 1.6rem;
+}
+
+h2, h5 {
     color: var(--primary-blue);
 }
 
@@ -59,17 +64,25 @@ i {
     color: var(--primary-blue);
 }
 
-    i:hover {
-        color: var(--secondary-blue);
-    }
+/* User icon */
+.bi-person-circle {
+    font-size: 16px;
+    color: var(--gray);
+}
 
 /* Create, edit and register icon */
-aside i,
+.bi-plus,
+.bi-plus-lg,
+.btn-outline-success:hover .bi-plus-lg,
 .bi-pencil-square,
 .bi-person-fill-add,
 .bi-person-fill-check {
     font-size: 16px;
     color: var(--white);
+}
+
+.btn-outline-success .bi-plus-lg {
+    color: var(--success);
 }
 
 /* Back, delete and search icon size */
@@ -194,7 +207,9 @@ aside i,
     grid-area: c;
 }
 
-.key-1, .key-2, .key-3 {
+.key-1, 
+.key-2, 
+.key-3 {
     margin: 8px;
     padding: 30px;
     border-radius: 12px;
@@ -210,7 +225,9 @@ aside i,
         "a b c";
 }
 
-.key-grid p {
+.key-1 p,
+.key-2 p,
+.key-3 p {
     color: var(--gray);
 }
 
