--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,3 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<h1>{{error.status}}: {{message}}</h1>
+<p class="text-danger">Sorry, the page you're looking for could not be found.</p>
+<a href="/" class="btn btn-link ps-0 mb-4">Back to Home</a>
