--- a/views/records/create.hbs
+++ b/views/records/create.hbs
@@ -25,9 +25,8 @@
         {{!-- user --}}
         <fieldset class="mb-4">
             <label for="username" class="form-label"><small>Username: *</small></label>
-            <input name="username" id="username" class="form-control" placeholder="Temporary" required />
-            {{!-- <input name="username" id="username" type="hidden" value="{{user.username}}" />
-            <input name="usernameDisplay" id="usernameDisplay" class="form-control" required disabled value="{{user.username}}" /> --}}
+            <input name="username" id="username" type="hidden" value="{{user.username}}" />
+            <input name="usernameDisplay" id="usernameDisplay" class="form-control" value="{{user.username}}" disabled required />
         </fieldset>
         <div class="d-grid">
             <button class="btn btn-primary mb-4">Save</button>
