--- a/views/records/index.hbs
+++ b/views/records/index.hbs
@@ -1,8 +1,9 @@
-<section class="row pb-2">
+<section class="row pb-4">
     <header class="col-md-8">
         <h1>Health Records</h1>
         <p>Add your child's medical information to keep medical records organized and up-to-date.</p>
     </header>
+    {{#if user}}
     <aside class="col-md-4 align-self-md-center text-md-end">
         <p>
             <a href="/records/create" class="btn btn-primary">
@@ -10,32 +11,24 @@
             </a>
         </p>
     </aside>
+    {{/if}}
 </section>
-
-{{!-- keyword search: to fix - not fetching queries --}}
-{{!-- <section class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
-    <form action="/records/search" method="post" class="d-flex mb-5">
-        <input name="keyword" class="form-control me-2" placeholder="Type keyword to search" required />
-        <button class="btn btn-outline-primary">
-            <i class="bi bi-search"></i>
-        </button>
-    </form>
-</section> --}}
 
 <section class="row">
     {{#each records}}
-    <article class="col-lg-4 mb-3">
+    <article class="col-xl-4 col-md-6 mb-3">
         <div class="card">
-            <header class="card-header p-3">
+            <header class="d-flex justify-content-between card-header p-3">
                 <h5 class="mb-0">{{this.event}}</h5>
+                <p class="mb-0"><small>by {{this.username}}</small></p>
             </header>
             <div class="card-body">
                 <div class="row">
-                    <div class="col col-lg-6 col-md-4">
+                    <div class="col col-lg-6">
                         <p class="mb-0"><small>Date</small></p>
                         <p>{{this.updatedDate}}</p>
                     </div>
-                    <div class="col col-lg-6 col-md-4">
+                    <div class="col col-lg-6">
                         <p class="mb-0"><small>Child</small></p>
                         <p>{{this.child}}</p>
                     </div>
