--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,22 +15,22 @@
 </section>
 
 {{#if user}}
-<section class="row justify-content-center">
-    <div class="key-1 col-lg-3 col-md-6 mb-3">
-        <div>
+<section class="row justify-content-center mx-2">
+    <div class="key-1 col-xl-4 col-lg-5 mb-3">
+        <article>
             <h2>Health Records</h2>
             <p>Log your child's preventive health needs and medical history</p>
-        </div>
+        </article>
         <a href="/records" class="btn btn-outline-primary btn-sm">View All</a>
         <a href="/records/create" class="btn btn-outline-success btn-sm">
             <i class="bi bi-plus-lg"></i>
         </a>
     </div>
-    <div class="key-2 col-lg-3 col-md-6 mb-3">
-        <div>
+    <div class="key-2 col-xl-4 col-lg-5 mb-3">
+        <article>
             <h2>Artwork Gallery</h2>
             <p>Explore the artwork gallery feature to showcase your child's artwork and their inspiration behind each one.</p>
-        </div>
+        </article>
         <a href="/artworks" class="btn btn-outline-primary btn-sm">View All</a>
         <a href="/artworks/create" class="btn btn-outline-success btn-sm">
             <i class="bi bi-plus-lg"></i>
