--- a/views/records/index.hbs
+++ b/views/records/index.hbs
@@ -4,12 +4,13 @@
         <p>Add your child's medical information to keep medical records organized and up-to-date.</p>
     </header>
     {{#if user}}
-    <aside class="col-md-4 align-self-md-center text-md-end">
-        <p>
-            <a href="/records/create" class="btn btn-primary">
-                <i class="bi bi-plus-lg pe-2"></i>Create New
-            </a>
-        </p>
+    <aside class="col-md-4 align-self-md-start text-md-end">
+        <a href="/records/create" class="btn btn-primary my-2">
+            <i class="bi bi-plus-lg pe-2"></i>Create New
+        </a>
+        <a href="/records/download" class="btn btn-primary">
+            <i class="bi bi-download pe-2"></i>Download as PDF
+        </a>
     </aside>
     {{/if}}
 </section>
