--- a/views/records/create.hbs
+++ b/views/records/create.hbs
@@ -1,5 +1,5 @@
-<section class="row create-field">
-    <h1 class="mb-4">{{title}}</h1>
+<section class="create-field">
+    <h1 class="h1-md mb-4">{{title}}</h1>
     <form method="post">
         {{!-- date --}}
         <fieldset class="mb-4">
