--- a/views/auth/unauthorized.hbs
+++ b/views/auth/unauthorized.hbs
@@ -1,3 +1,3 @@
 <h1>403: Unauthorized</h1>
 <p class="text-danger">Sorry, you can't access this page.</p>
-<a href="/" class="btn btn-link ps-0 mb-4">Back to Home</a>
+<a href="/records" class="btn btn-link ps-0 mb-4">Back to list</a>
