--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,15 +38,10 @@
 
                 {{!-- links --}}
                 <div class="collapse navbar-collapse" id="globalNav">
-                    <ul class="navbar-nav ms-auto">
-                        {{#if user}}
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/records">Health</a>
+                            <a class="nav-link" href="/records">Health Records</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/artworks">Artworks</a>
-                        </li>
-                        {{/if}}
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         {{#if user}}
