--- a/views/records/details.hbs
+++ b/views/records/details.hbs
@@ -1,16 +1,20 @@
 <section>
     <a href="/records" class="btn btn-link ps-0 mb-4">
-        <i class="bi bi-chevron-left pe-2"></i>Back to List
+        <i class="bi bi-chevron-left pe-2"></i><small>Back to List</small>
     </a>
     <article class="health-details">
         <div class="d-flex align-items-start mb-2">
             <h6 class="badge text-bg-secondary m-0">{{record.child}}</h6>
             <p class="m-0">
-                <small><span class="m-2">•</span>{{record.updatedDate}}</small>
+                <small>
+                    <span class="m-2">•</span>{{record.updatedDate}}
+                    <span class="m-2">•</span>by {{record.username}}
+                </small>
             </p>
         </div>
         <h1>{{record.event}}</h1>
         <p class="mb-4">{{record.notes}}</p>
+        {{#if user}}
         <a href="/records/edit/{{record._id}}" class="btn btn-primary">
             <i class="bi bi-pencil-square pe-2"></i>Edit
         </a>
@@ -18,5 +22,6 @@
             onclick="return confirm('Are you sure?')";>
             <i class="bi bi-trash3 pe-2"></i>Delete
         </a>
+        {{/if}}
     </article>
 </section>
