--- a/views/records/index.hbs
+++ b/views/records/index.hbs
@@ -1,15 +1,20 @@
-<section class="row pb-4">
-    <header class="col-md-8">
+<section class="row pb-5">
+    <header class="col-lg-8 text-lg-start text-center">
         <h1>Health Records</h1>
-        <p>Add your child's medical information to keep medical records organized and up-to-date.</p>
-    </header>
-    {{#if user}}
-    <aside class="col-md-4 align-self-md-start text-md-end">
-        <a href="/records/create" class="btn btn-primary my-2">
+        <p class="m-0">Add your child's medical information to keep medical records organized and up-to-date.</p>
+        {{#if user}}
+        <a href="/records/create" class="btn btn-primary mt-3">
             <i class="bi bi-plus-lg pe-2"></i>Create New
         </a>
-        <a href="/records/download" class="btn btn-primary">
-            <i class="bi bi-download pe-2"></i>Download as PDF
+        {{/if}}
+    </header>
+    {{#if user}}
+    <aside class="d-flex flex-lg-column flex-row col-lg-4 col-12 justify-content-lg-end justify-content-center align-items-lg-end align-items-center mt-lg-0 mt-2">
+        <a href="/records/download-all" class="btn btn-outline-primary btn-sm mb-lg-2 mx-2">
+            <i class="bi bi-download pe-2"></i>Download All as PDF
+        </a>
+        <a href="/records/download" class="btn btn-outline-primary btn-sm">
+            <i class="bi bi-download pe-2"></i>Download Your Posts as PDF
         </a>
     </aside>
     {{/if}}
@@ -17,27 +22,27 @@
 
 <section class="row">
     {{#each records}}
-    <article class="col-xl-4 col-md-6 mb-3">
-        <div class="card">
-            <header class="d-flex justify-content-between card-header p-3">
-                <h5 class="mb-0">{{this.event}}</h5>
-                <p class="mb-0"><small>by {{this.username}}</small></p>
-            </header>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col col-lg-6">
-                        <p class="mb-0"><small>Date</small></p>
-                        <p>{{this.updatedDate}}</p>
-                    </div>
-                    <div class="col col-lg-6">
-                        <p class="mb-0"><small>Child</small></p>
-                        <p>{{this.child}}</p>
-                    </div>
+    <div class="col-xl-4 col-lg-6 d-flex flex-column align-items-stretch health-card mb-4">
+        <header class="d-flex justify-content-between card-header p-3">
+            <h5 class="mb-0">{{this.event}}</h5>
+            <p class="mb-0"><small>by {{this.username}}</small></p>
+        </header>
+        <div class="card-body">
+            <div class="row">
+                <div class="col col-lg-6">
+                    <p class="card-sm mb-0"><small>Date</small></p>
+                    <p>{{this.updatedDate}}</p>
                 </div>
-                <p class="card-text">{{this.notes}}</p>
-                <a href="/records/details/{{this.id}}" class="btn btn-outline-primary btn-sm mb-1">View</a>
+                <div class="col col-lg-6">
+                    <p class="card-sm mb-0"><small>Child</small></p>
+                    <p>{{this.child}}</p>
+                </div>
             </div>
+            <p class="card-text">{{this.notes}}</p>
+            {{#if ../user}}
+                <a href="/records/details/{{this.id}}" class="btn btn-outline-primary btn-sm mb-1">View</a>
+            {{/if}}
         </div>
-    </article>
+    </div>
     {{/each}}
 </section>
